@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.11.17-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-17 21:15:43, took 00:16:11, with 80 workers, on 3326 cases, 0 failed, 0 traces, 7 retries
+-;-;-;2023-11-17 22:18:29, took 00:14:18, with 80 workers, on 3330 cases, 0 failed, 0 traces, 11 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -2856,6 +2856,7 @@ http://sources.freertr.org/cfg/rout-eigrp23.tst;rout-eigrp23.tst;success;eigrp e
 http://sources.freertr.org/cfg/rout-eigrp24.tst;rout-eigrp24.tst;success;eigrp default address suppression
 http://sources.freertr.org/cfg/rout-eigrp25.tst;rout-eigrp25.tst;success;eigrp address unsuppression
 http://sources.freertr.org/cfg/rout-eigrp26.tst;rout-eigrp26.tst;success;eigrp auto summarization
+http://sources.freertr.org/cfg/rout-eigrp27.tst;rout-eigrp27.tst;success;eigrp with pmtud
 http://sources.freertr.org/cfg/rout-isis001.tst;rout-isis001.tst;success;isis over ethernet
 http://sources.freertr.org/cfg/rout-isis002.tst;rout-isis002.tst;success;isis over ethernet vlan
 http://sources.freertr.org/cfg/rout-isis003.tst;rout-isis003.tst;success;isis over ethernet bridge
@@ -2966,6 +2967,7 @@ http://sources.freertr.org/cfg/rout-isis107.tst;rout-isis107.tst;success;isis dy
 http://sources.freertr.org/cfg/rout-isis108.tst;rout-isis108.tst;success;isis with mpolka
 http://sources.freertr.org/cfg/rout-isis109.tst;rout-isis109.tst;success;isis flexalgo
 http://sources.freertr.org/cfg/rout-isis110.tst;rout-isis110.tst;success;integrated isis flexalgo
+http://sources.freertr.org/cfg/rout-isis111.tst;rout-isis111.tst;success;isis with pmtud
 http://sources.freertr.org/cfg/rout-lsrp01.tst;rout-lsrp01.tst;success;lsrp point2point connection
 http://sources.freertr.org/cfg/rout-lsrp02.tst;rout-lsrp02.tst;success;lsrp point2multipoint connection
 http://sources.freertr.org/cfg/rout-lsrp03.tst;rout-lsrp03.tst;success;lsrp point2point chain
@@ -3120,6 +3122,7 @@ http://sources.freertr.org/cfg/rout-ospf56.tst;rout-ospf56.tst;success;ospf dyna
 http://sources.freertr.org/cfg/rout-ospf57.tst;rout-ospf57.tst;success;ospf dynamic twamp cost
 http://sources.freertr.org/cfg/rout-ospf58.tst;rout-ospf58.tst;success;ospf with mpolka
 http://sources.freertr.org/cfg/rout-ospf59.tst;rout-ospf59.tst;success;ospf flexalgo
+http://sources.freertr.org/cfg/rout-ospf60.tst;rout-ospf60.tst;success;ospf with pmtud
 http://sources.freertr.org/cfg/rout-pbr01.tst;rout-pbr01.tst;success;policy routing with nexthop
 http://sources.freertr.org/cfg/rout-pbr02.tst;rout-pbr02.tst;success;policy routing with interface and nexthop between vrfs
 http://sources.freertr.org/cfg/rout-pbr03.tst;rout-pbr03.tst;success;policy routing with interface and nexthop
@@ -3253,6 +3256,7 @@ http://sources.freertr.org/cfg/rout-rift25.tst;rout-rift25.tst;success;rift inte
 http://sources.freertr.org/cfg/rout-rift26.tst;rout-rift26.tst;success;rift dynamic icmp metric
 http://sources.freertr.org/cfg/rout-rift27.tst;rout-rift27.tst;success;rift dynamic udp metric
 http://sources.freertr.org/cfg/rout-rift28.tst;rout-rift28.tst;success;rift dynamic twamp metric
+http://sources.freertr.org/cfg/rout-rift29.tst;rout-rift29.tst;success;rift with pmtud
 http://sources.freertr.org/cfg/rout-rip01.tst;rout-rip01.tst;success;rip on one subnet
 http://sources.freertr.org/cfg/rout-rip02.tst;rout-rip02.tst;success;rip in chain
 http://sources.freertr.org/cfg/rout-rip03.tst;rout-rip03.tst;success;rip ingress route filtering with prefixlist
